Remove unnecessary whitespace in style-about.css and correct font-weight in style.css

--- a/1er-Curso/style/style.css
+++ b/1er-Curso/style/style.css
@@ -126,7 +126,7 @@ img{
 .presentacion__enlaces__subtitulo{
 
     font-size: 1.5rem;
-    font-weight: regular;
+    font-weight: normal;
 
 }
 
